# Meridian

./: .env.example  .gitignore  index.html  package-lock.json  package.json  requirements.txt
BixBench/: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  generate_zeroshot_evals.py  grade_outputs.py  pyproject.toml
BixBench/.github/workflows/: tests.yml
BixBench/bixbench/: __init__.py  generate_trajectories.py  graders.py  models.py  plot_style.py  plotting_utils.py  postprocessing.py  postprocessing_utils.py  prompts.py  utils.py  zero_shot.py
BixBench/bixbench-v1.5_results/: zero_shot_baselines.json
BixBench/bixbench-v1.5_results/zero_shot_baselines/: claude-3-5-sonnet-latest-grader-mcq-refusal-False.csv  claude-3-5-sonnet-latest-grader-mcq-refusal-True.csv  claude-3-5-sonnet-latest-grader-openended.csv  gpt-4o-grader-mcq-refusal-False.csv  gpt-4o-grader-mcq-refusal-True.csv  gpt-4o-grader-openended.csv
BixBench/bixbench/run_configuration/: 4o_image.yaml  4o_no_image.yaml  bixbench_paper_results.yaml  claude_image.yaml  claude_no_image.yaml  generate_trajectories.yaml  postprocessing.yaml  v1.5_paper_results.yaml
BixBench/scripts/: run_agentic.sh  run_zeroshot.sh
BixBench/tests/: test_utils.py  test_zeroshot.py
LAB-Bench/: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
LAB-Bench/.github/workflows/: ci.yaml
LAB-Bench/FigQA/: figqa-v1-public.jsonl
LAB-Bench/SeqQA/: PCR-gene-enzprimers-v1-public.jsonl  PCR-gene-enzprimers-v1-splits.json  PCR-geneprimers-enz-v1-public.jsonl  PCR-geneprimers-enz-v1-splits.json  PCR-seq-enzprimers-v1-public.jsonl  PCR-seq-enzprimers-v1-splits.json  RE-seq-lenfrags-v1-public.jsonl  RE-seq-lenfrags-v1-splits.json  RE-seq-numfrags-v1-public.jsonl  RE-seq-numfrags-v1-splits.json
LAB-Bench/TableQA/: tableqa-v1-openanswer.jsonl  tableqa-v1-public.jsonl
LAB-Bench/labbench/: __init__.py  anthropic_utils.py  anyscale.py  evaluator.py  openai_utils.py  utils.py  vertex.py  zero_shot.py
LAB-Bench/scripts/: create_splits.py  update_datasets_in_hub.py  upload_datasets_to_hub.py
backend/: app.py
backend/core/: database.py  llm.py  orchestrator.py  papers.py  state.py
backend/routers/: auth.py  graph_search.py  mock.py  query.py  research.py  sessions.py
backend/schemas/: agent.py  research.py
